[package]
name = "api_verify"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
async-trait = "0.1"
cucumber = { version = "0.11", features = ["output-junit"] }
futures = "0.3"

[[test]]
name = "public"
harness = false 

[[test]]
name = "private"
harness = false 

[dependencies]
reqwest = { version = "^0.11", features = ["json"] }
tokio = { version = "^1", features = ["full"] }
serde_json = "^1"
serde = { version = "^1.0", features = ["derive"] }
boringauth = "^0.9.0"
sha2 = "^0.10.1"
base64 = "^0.13.0"
hmac = "^0.12.0"
serde_urlencoded = "^0.7"
url = "^2.2.2"
docker_secrets = "^0.1.1"
jsonschema = "^0.15.0"
itertools = "^0.10.3"
